# RAG_lawyer

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  cohere.md  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  main.py
app/api/: __init__.py  chat.py  user.py
app/config/: lawyer_agent.yml  research_sub_agent.yml
app/core/: error_code.py  exceptions.py  security.py
app/core/agent/: __init__.py  (+1 more)
app/schemas/: user.py
app/service/: __init__.py  agent.py  chat.py  user.py
app/storage/: __init__.py  mongodb.py  vector_store.py
data/LuatLaoDong2025_temp/: 00d1d1e9-db05-49e9-b3cf-b05b609e294f.json  01076139-d981-4d62-ae5c-9b93f9c3017f.json  01276745-7f06-473d-bf97-9bda5279070e.json  02033fbf-6d9c-4d74-b941-dd8559703361.json  0322f345-9cf6-4842-9a59-ea50f8d9a296.json  03726a2e-8d39-4be6-a9d4-0ccc5ee5fa98.json  03bb856f-6204-4290-80c1-dc51eff94ced.json  04945f19-6ee3-45bc-a63c-da772a35a96e.json  0494601d-70b8-413e-9856-ea3e122cc0b2.json  04a71ab2-32af-465a-8fe3-b38d53739efb.json  05c53214-ed7a-44b8-9d51-2ae68996637a.json  05e3cea7-65e9-43df-9850-617702692e4e.json  06aa2d7e-d37a-46eb-91d6-b421c798eca1.json  06cad550-5ff0-45c4-9ff3-f2e7b658882b.json  0827948b-ef87-4577-b973-04d12a893d53.json  083f9397-c33e-452d-9ac1-8e5a829538ce.json  084b1f5b-f72b-4d0e-953a-da2c731eece6.json  08d1f2f8-3ba6-41b5-b7bc-2b5d26187f92.json  (+618 more)
frontend/: Dockerfile  package-lock.json
notebook/: test_search_law.py  test_tech.ipynb  test_vtsearch_reranking.ipynb  upsert_document.ipynb
scripts/: prepare_qdrant.py
(+22 files in other folders)
