[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-lawyer"
version = "0.1.0"
description = "Hệ thống AI Agent hỗ trợ tư vấn Luật Lao Động sử dụng RAG"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Admin", email = "admin@example.com" }
]
dependencies = [
    "deepagents==0.6.10",
    "fastapi==0.138.0",
    "langchain-anthropic==1.4.7",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.5",
    "langchain-huggingface==1.2.2",
    "langchain-openai==1.3.3",
    "langchain-qdrant==1.1.0",
    "langgraph==1.2.6",
    "pydantic==2.13.4",
    "PyJWT==2.13.0",
    "pymongo==4.15.0",
    "python-dotenv==1.2.2",
    "langgraph-checkpoint-mongodb==0.3.1",
    "PyYAML==6.0.3",
    "qdrant-client==1.18.0",
    "research-agent==0.0.2",
    "sentence-transformers==5.5.1",
    "uvicorn==0.49.0",
    "cohere==7.0.4",
    "torch>=2.0.0", # Khai báo phiên bản torch chung để uv quản lý linh hoạt
]

[tool.uv]
# Cấu hình các gói cài đặt bổ sung cho môi trường phát triển (Jupyter Notebook)
dev-dependencies = [
    "ipykernel>=6.29.0",
    "notebook>=7.1.0",
]
# Chỉ định các nguồn tải PyTorch (tối ưu hóa cho cả CPU và CUDA)
index = [
    { name = "pypi", url = "https://pypi.org/simple" }
]
